--- a/SECB/app/src/main/res/layout-ar/news_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/news_item_card.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
     android:layout_marginTop="@dimen/event_card_margin"-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/layout_item_root"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/news_item_card_height"
     android:layout_marginBottom="@dimen/event_card_margin"
-    android:background="@color/white"
+    android:background="@drawable/recycler_view_item"
     android:orientation="horizontal"
     android:weightSum="5">
 
@@ -24,7 +26,7 @@
             android:ellipsize="end"
             android:gravity="bottom|right"
             android:maxLines="1"
-            android:textColor="@color/sceb_dark_blue"
+            android:textColor="@color/white_blue_def_blue_selector"
             android:textSize="@dimen/event_card_h1_text_size"
             android:textStyle="bold" />
 
@@ -37,7 +39,7 @@
             android:gravity="top|right"
             android:layout_marginTop="-8dp"
             android:maxLines="1"
-            android:textColor="@color/darkgrey_color"
+            android:textColor="@color/white_grey_def_grey_selector"
             android:textSize="@dimen/event_card_h2_text_size" />
 
         <LinearLayout
@@ -54,7 +56,7 @@
                 android:ellipsize="end"
                 android:gravity="left|top"
                 android:maxLines="1"
-                android:textColor="@color/darkgrey_color"
+                android:textColor="@color/white_grey_def_grey_selector"
                 android:textSize="@dimen/event_card_h3_text_size" />
 
         </LinearLayout>
