--- a/SECB/app/src/main/res/layout-ar/organizer_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/organizer_item_card.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/item_card_height"
-    android:layout_marginBottom="@dimen/eguide_base_padding"
-    android:layout_marginTop="@dimen/eguide_base_padding"
-    android:padding="@dimen/eguide_base_padding"
-    android:background="@color/off_white"
-    android:orientation="horizontal"
-    android:weightSum="5">
+<LinearLayout android:id="@+id/layout_item_root"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="@dimen/item_card_height"
+              android:layout_marginBottom="@dimen/eguide_base_padding"
+              android:layout_marginTop="@dimen/eguide_base_padding"
+              android:background="@drawable/recycler_view_item"
+              android:orientation="horizontal"
+              android:padding="@dimen/eguide_base_padding"
+              android:weightSum="5">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -26,9 +27,9 @@
             android:gravity="bottom"
             android:maxLines="1"
             android:text="لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها. لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها."
-            android:textColor="@color/sceb_dark_blue"
+            android:textColor="@color/white_blue_def_blue_selector"
             android:textSize="@dimen/event_card_h1_text_size"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <!--android:gravity="center_vertical"-->
         <TextView
@@ -40,8 +41,8 @@
             android:gravity="top"
             android:maxLines="2"
             android:text="لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها.  لقد قامت السعودية بتطوير المؤتمرات المنعقدة ليديها."
-            android:textColor="@color/darkgrey_color"
-            android:textSize="@dimen/event_card_h2_text_size" />
+            android:textColor="@color/white_grey_def_grey_selector"
+            android:textSize="@dimen/event_card_h2_text_size"/>
 
 
     </LinearLayout>
@@ -56,6 +57,6 @@
         android:layout_marginRight="@dimen/eguide_base_padding"
         android:layout_weight="1"
         android:scaleType="centerCrop"
-        android:src="@drawable/event_card_img" />
+        android:src="@drawable/event_card_img"/>
 
 </LinearLayout>
