--- a/SECB/app/src/main/res/layout/event_item_card.xml
+++ b/SECB/app/src/main/res/layout/event_item_card.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?><!--    android:paddingBottom="@dimen/event_card_margin"
     android:paddingTop="@dimen/event_card_margin"-->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    android:id="@+id/layout_item_root"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+
     android:layout_height="@dimen/item_card_height"
     android:layout_marginBottom="@dimen/eguide_base_padding"
     android:layout_marginTop="@dimen/eguide_base_padding"
-    android:background="@color/off_white"
+    android:background="@drawable/recycler_view_item"
     android:orientation="horizontal"
     android:padding="@dimen/event_card_margin"
     android:weightSum="3">
@@ -17,7 +20,7 @@
         android:layout_height="@dimen/evet_card_img_size"
         android:layout_marginRight="@dimen/event_card_margin"
         android:src="@drawable/event_card_img"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <!-- Event Date -->
     <LinearLayout
@@ -36,7 +39,7 @@
             android:text="13"
             android:textColor="@color/secb_orange"
             android:textSize="@dimen/eventImgDate_day_text_size"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/txtv_eventImgDate_month"
@@ -44,7 +47,7 @@
             android:layout_height="wrap_content"
             android:text="OCT"
             android:textColor="@color/white"
-            android:textSize="@dimen/eventImgDate_month_text_size" />
+            android:textSize="@dimen/eventImgDate_month_text_size"/>
     </LinearLayout>
 
 
@@ -64,9 +67,9 @@
             android:layout_weight="1"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textColor="@color/secb_dark_text"
+            android:textColor="@color/white_blue_def_blue_selector"
             android:textSize="@dimen/event_card_h1_text_size"
-            android:textStyle="bold" />
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/txtv_eventDescription"
@@ -75,8 +78,8 @@
             android:layout_weight="1.5"
             android:ellipsize="end"
             android:maxLines="2"
-            android:textColor="@color/secb_grey_text"
-            android:textSize="@dimen/event_card_h3_text_size" />
+            android:textColor="@color/white_grey_def_grey_selector"
+            android:textSize="@dimen/event_card_h3_text_size"/>
 
         <!--<LinearLayout
             android:layout_width="match_parent"
@@ -157,14 +160,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:drawableLeft="@drawable/event_card_time_icon"
+                android:layout_marginRight="10dp"
+                android:drawableLeft="@drawable/event_time_icon_selector"
                 android:drawablePadding="3dp"
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:layout_marginRight="10dp"
-                android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/event_card_h3_text_size" />
+                android:textColor="@color/white_blue_def_blue_selector"
+                android:textSize="@dimen/event_card_h3_text_size"/>
 
 
             <TextView
@@ -172,15 +175,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:maxWidth="200dp"
-                android:drawableLeft="@drawable/event_card_place_icon"
-                android:drawablePadding="3dp"
                 android:layout_marginRight="10dp"
+                android:drawableLeft="@drawable/event_place_icon_selector"
+                android:drawablePadding="3dp"
                 android:ellipsize="end"
                 android:maxLines="1"
+                android:maxWidth="200dp"
                 android:singleLine="true"
-                android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/event_card_h3_text_size" />
+                android:textColor="@color/white_blue_def_blue_selector"
+                android:textSize="@dimen/event_card_h3_text_size"/>
 
 
             <TextView
@@ -188,15 +191,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:drawableLeft="@drawable/event_card_filter_icon"
+                android:drawableLeft="@drawable/event_filter_icon_selector"
                 android:drawablePadding="3dp"
 
-                android:text=""
                 android:ellipsize="end"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/event_card_h3_text_size" />
+                android:text=""
+                android:textColor="@color/white_blue_def_blue_selector"
+                android:textSize="@dimen/event_card_h3_text_size"/>
         </TableRow>
 
     </LinearLayout>
