--- a/SECB/app/src/main/res/layout/news_item_card.xml
+++ b/SECB/app/src/main/res/layout/news_item_card.xml
@@ -36,7 +36,7 @@
             android:gravity="top"
             android:textStyle="bold"
             android:maxLines="1"
-            android:textColor="@color/sceb_dark_blue"
+            android:textColor="@color/white_blue_def_blue_selector"
             android:textSize="@dimen/event_card_h1_text_size"
              />
 
@@ -49,7 +49,7 @@
             android:ellipsize="end"
             android:gravity="top"
             android:maxLines="1"
-            android:textColor="@color/darkgrey_color"
+            android:textColor="@color/white_grey_def_grey_selector"
             android:textSize="@dimen/event_card_h2_text_size" />
 
         <LinearLayout
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="right|top"
                 android:maxLines="1"
-                android:textColor="@color/darkgrey_color"
+                android:textColor="@color/white_grey_def_grey_selector"
                 android:textSize="@dimen/event_card_h3_text_size" />
 
         </LinearLayout>
