--- a/SECB/app/src/main/res/layout-sw720dp/contact_us.xml
+++ b/SECB/app/src/main/res/layout-sw720dp/contact_us.xml
@@ -168,11 +168,11 @@
             android:id="@+id/txtv_formTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/event_details_iconed_info_layout"
-            android:layout_marginBottom="@dimen/event_details_iconed_info_margin"
-            android:layout_marginLeft="@dimen/event_details_iconed_info_margin"
-            android:layout_marginRight="@dimen/event_details_iconed_info_margin"
-            android:layout_marginTop="@dimen/contact_us_text_drwable_padding"
+            android:layout_below="@+id/contact_us_padding"
+            android:layout_marginBottom="@dimen/contact_us_padding"
+            android:layout_marginLeft="@dimen/contact_us_padding"
+            android:layout_marginRight="@dimen/contact_us_padding"
+            android:layout_marginTop="@dimen/contact_us_padding"
             android:padding="@dimen/contact_us_base_margin"
             android:text="@string/contact_us_form_title"
             android:textColor="@color/secb_dark_text"
