--- a/SECB/app/src/main/res/layout/reset_password.xml
+++ b/SECB/app/src/main/res/layout/reset_password.xml
@@ -16,12 +16,14 @@
         android:layout_marginTop="-125dp">
 
         <!--logo-->
+        <!--android:layout_height="@dimen/login_logo_img_height"
+        android:scaleType="centerCrop"-->
         <ImageView
             android:layout_width="@dimen/login_logo_img_width"
-            android:layout_height="@dimen/login_logo_img_height"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="@dimen/forget_pass_logo_margin_bottom"
-            android:scaleType="centerCrop"
+
             android:src="@drawable/login_logo"
             android:visibility="visible" />
 
