--- a/SECB/app/src/main/res/layout-ar-sw720dp/e_services_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-ar-sw720dp/e_services_filter_screen.xml
@@ -21,7 +21,7 @@
             android:background="#aa000000"
             android:clickable="true"
             android:orientation="vertical"
-            android:visibility="visible"></LinearLayout>
+            android:visibility="gone"></LinearLayout>
 
         <LinearLayout
             android:id="@+id/filter_container"
