--- a/SECB/app/src/main/res/layout-ar/e_service_item_card.xml
+++ b/SECB/app/src/main/res/layout-ar/e_service_item_card.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/eservice_item_padding">
+                android:layout_marginBottom="@dimen/eservice_item_margin_btm"
+                android:layout_marginTop="@dimen/eservice_item_margin_tablet"
+                android:layout_marginRight="@dimen/eservice_item_margin_tablet">
 
     <ImageView
         android:layout_width="match_parent"
@@ -82,7 +84,7 @@
                         android:gravity="right"
                         android:text="gggg"
                         android:textColor="@color/secb_grey_text"
-                        android:textSize="@dimen/contact_us_text_us"/>
+                        android:textSize="@dimen/eservice_item_title_text_size" />
 
                     <TextView
                         android:id="@+id/txtv_status_title"
@@ -93,7 +95,7 @@
                         android:gravity="right"
                         android:text="@string/status"
                         android:textColor="@color/secb_dark_text"
-                        android:textSize="@dimen/contact_us_text_us"/>
+                        android:textSize="@dimen/eservice_item_title_text_size" />
 
 
                 </TableRow>
