--- a/SECB/app/src/main/res/layout-ar/menu_layout.xml
+++ b/SECB/app/src/main/res/layout-ar/menu_layout.xml
@@ -1,9 +1,10 @@
+<!--android:paddingTop="@dimen/header_menu_icon_margin_start"-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/menu_bg"
     android:orientation="vertical"
-    android:paddingTop="@dimen/header_menu_icon_margin_start">
+    >
 
     <View
         android:layout_width="match_parent"
