--- a/SECB/app/src/main/res/layout-sw720dp/events_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-sw720dp/events_filter_screen.xml
@@ -11,7 +11,7 @@
         android:background="#aa000000"
         android:clickable="true"
         android:orientation="vertical"
-        android:visibility="visible"></LinearLayout>
+        android:visibility="gone"></LinearLayout>
 
 
     <ImageView
