--- a/SECB/app/src/main/res/layout-sw720dp/news_filter_screen.xml
+++ b/SECB/app/src/main/res/layout-sw720dp/news_filter_screen.xml
@@ -13,7 +13,7 @@
         android:background="#aa000000"
         android:clickable="true"
         android:orientation="vertical"
-        android:visibility="visible"></LinearLayout>
+        android:visibility="gone"></LinearLayout>
 
     <!--android:layout_height="@dimen/news_filter_screen_height"-->
     <LinearLayout
