--- a/SECB/app/src/main/res/layout/home_events_title.xml
+++ b/SECB/app/src/main/res/layout/home_events_title.xml
@@ -16,7 +16,7 @@
         android:src="@drawable/events_icon_2" />
 
     <TextView
-        android:id="@+id/textViewTitleHeader"
+        android:id="@+id/txtv_home_events_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
