--- a/SECB/app/src/main/res/layout/location_details.xml
+++ b/SECB/app/src/main/res/layout/location_details.xml
@@ -21,7 +21,7 @@
             android:text="@string/loading"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/gallery_item_text_size"
-            android:visibility="visible" />
+            android:visibility="gone" />
 
 
         <LinearLayout
@@ -31,7 +31,7 @@
             android:background="@color/white"
             android:orientation="vertical"
             android:padding="@dimen/eguide_base_padding"
-            android:visibility="gone"
+            android:visibility="visible"
             android:weightSum="3.5">
 
             <RelativeLayout
