--- a/SECB/app/src/main/res/layout/news_activity.xml
+++ b/SECB/app/src/main/res/layout/news_activity.xml
@@ -7,7 +7,7 @@
     <FrameLayout
         android:id="@+id/news_list_container"
         android:layout_width="match_parent"
-        android:background="@color/light_grey"
+        android:background="@drawable/home_bg"
         android:layout_height="match_parent">
     </FrameLayout>
 </LinearLayout>
