--- a/SECB/app/src/main/res/layout/news_item_card.xml
+++ b/SECB/app/src/main/res/layout/news_item_card.xml
@@ -22,7 +22,7 @@
 
     <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginRight="@dimen/event_card_margin"
         android:layout_weight="3.5"
         android:orientation="vertical"
