--- a/SECB/app/src/main/res/layout-ar/organizer_personal_info.xml
+++ b/SECB/app/src/main/res/layout-ar/organizer_personal_info.xml
@@ -16,9 +16,13 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="@dimen/organizer_p_info_icon_margin"
-            android:src="@drawable/home_icon_2" />
+            android:src="@drawable/home_icon_2"
+            android:visibility="gone"/>
 
         <TextView
+            android:layout_alignParentRight="true"
+            android:drawableRight="@drawable/home_icon_2"
+            android:drawablePadding="@dimen/organizer_p_info_icon_margin"
             android:id="@+id/address_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -52,15 +56,19 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="@dimen/organizer_p_info_icon_margin"
-            android:src="@drawable/contactus_icon_2" />
+            android:src="@drawable/contactus_icon_2"
+            android:visibility="gone"/>
 
         <TextView
+            android:layout_alignParentRight="true"
+            android:drawablePadding="@dimen/organizer_p_info_icon_margin"
+            android:drawableRight="@drawable/contactus_icon_2"
             android:id="@+id/phone_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/phone_icon"
             android:gravity="center_vertical"
-            android:text="@string/phone"
+            android:text="@string/phone_"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
 
@@ -88,15 +96,19 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="@dimen/organizer_p_info_icon_margin"
-            android:src="@drawable/email_icon" />
+            android:src="@drawable/email_icon"
+            android:visibility="gone"/>
 
         <TextView
+            android:layout_alignParentRight="true"
+            android:drawablePadding="@dimen/organizer_p_info_icon_margin"
+            android:drawableRight="@drawable/email_icon"
             android:id="@+id/email_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/email_icon"
             android:gravity="center_vertical"
-            android:text="@string/email_address"
+            android:text="@string/email_address_"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
 
@@ -124,15 +136,20 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_marginLeft="@dimen/organizer_p_info_icon_margin"
-            android:src="@drawable/website_icon2" />
+            android:src="@drawable/website_icon2"
+            android:visibility="gone"/>
 
         <TextView
+            android:layout_alignParentRight="true"
+            android:drawablePadding="@dimen/organizer_p_info_icon_margin"
+
+            android:drawableRight="@drawable/website_icon2"
             android:id="@+id/website_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toLeftOf="@+id/website_icon"
             android:gravity="center_vertical"
-            android:text="@string/website"
+            android:text="@string/website_"
             android:textColor="@color/secb_dark_text"
             android:textSize="@dimen/organizer_p_info_h1_text_size" />
 
