--- a/SECB/app/src/main/res/layout-sw720dp/graphs_layout.xml
+++ b/SECB/app/src/main/res/layout-sw720dp/graphs_layout.xml
@@ -1,155 +1,177 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:layout_height="wrap_content"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:orientation="horizontal"
-    android:weightSum="3"
+    android:layout_height="wrap_content"
     android:gravity="center_horizontal"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    >
 
-    <!--android:layout_weight="1"-->
     <LinearLayout
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/home_graphs_card_margin_top"
-        android:layout_width="wrap_content"
-        android:orientation="vertical"
-        android:gravity="right">
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
+        android:weightSum="3">
 
-        <RelativeLayout
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_width="match_parent">
-
-            <TextView
-                android:gravity="center"
-                android:id="@+id/txtv_graph_value_closed"
-                android:layout_centerHorizontal="true"
-                android:layout_centerInParent="true"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="15"
-                android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/home_graphs_value_text_size"
-                android:textStyle="bold" />
-
-
-            <com.secb.android.view.components.dialogs.ProgressWheel
-                android:id="@+id/progressWheelClosed"
-                android:layout_centerInParent="true"
-                android:layout_height="@dimen/home_graphs_wheel_size"
-                android:layout_width="@dimen/home_graphs_wheel_size" />
-        </RelativeLayout>
-
-        <TextView
-            android:gravity="center_horizontal|center_vertical"
-            android:id="@+id/txtv_graph_title_closed"
-            android:layout_below="@+id/progressWheelClosed"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:text="@string/graph_title_closed"
-            android:textColor="@color/secb_dark_text"
-            android:textSize="@dimen/home_graphs_title_text_size"
-            android:includeFontPadding="false"
-            android:lineSpacingMultiplier="0.8"
-            android:lines="2"
-            android:textStyle="normal"/>
-    </LinearLayout>
-
-
-    <!--android:layout_weight="1"-->
-    <LinearLayout
-        android:layout_height="match_parent"
-        android:layout_marginLeft="@dimen/home_graphs_horizontal_margin"
-        android:layout_marginRight="@dimen/home_graphs_horizontal_margin"
-        android:layout_marginTop="@dimen/home_graphs_card_margin_top"
-        android:layout_width="wrap_content"
-        android:orientation="vertical">
-
-        <RelativeLayout
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_width="match_parent">
-
-            <TextView
-                android:id="@+id/txtv_graph_value_inbox"
-                android:layout_centerInParent="true"
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="15"
-                android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/home_graphs_value_text_size"
-                android:textStyle="bold" />
-
-
-            <com.secb.android.view.components.dialogs.ProgressWheel
-                android:id="@+id/progressWheelInbox"
-                android:layout_centerInParent="true"
-                android:layout_height="@dimen/home_graphs_wheel_size"
-                android:layout_width="@dimen/home_graphs_wheel_size" />
-        </RelativeLayout>
-
-        <TextView
-            android:gravity="center_horizontal|center_vertical"
-            android:id="@+id/txtv_graph_title_inbox"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/progressWheelInbox"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:text="@string/graph_title_inbox"
-            android:textColor="@color/secb_dark_text"
-            android:lineSpacingMultiplier="0.8"
-            android:textSize="@dimen/home_graphs_title_text_size"
-            android:lines="2"
-            android:textStyle="normal" />
-
-    </LinearLayout>
-
-
-    <!--android:layout_weight="1"-->
-    <LinearLayout
-        android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/home_graphs_card_margin_top"
-        android:layout_width="wrap_content"
-        android:orientation="vertical"
-        android:gravity="left">
-
-        <RelativeLayout
+        <!--android:layout_weight="1"-->
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:layout_width="match_parent">
+            android:layout_marginTop="@dimen/home_graphs_card_margin_top"
+            android:gravity="right"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/txtv_graph_value_closed"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerInParent="true"
+                    android:gravity="center"
+                    android:text="15"
+                    android:textColor="@color/secb_dark_text"
+                    android:textSize="@dimen/home_graphs_value_text_size"
+                    android:textStyle="bold"/>
+
+
+                <com.secb.android.view.components.dialogs.ProgressWheel
+                    android:id="@+id/progressWheelClosed"
+                    android:layout_width="@dimen/home_graphs_wheel_size"
+                    android:layout_height="@dimen/home_graphs_wheel_size"
+                    android:layout_centerInParent="true"/>
+            </RelativeLayout>
 
             <TextView
-                android:id="@+id/txtv_graph_value_inProgress"
-                android:layout_centerInParent="true"
+                android:id="@+id/txtv_graph_title_closed"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:text="15"
+                android:layout_below="@+id/progressWheelClosed"
+                android:gravity="center_horizontal|center_vertical"
+                android:includeFontPadding="false"
+                android:lineSpacingMultiplier="0.8"
+                android:lines="2"
+                android:text="@string/graph_title_closed"
                 android:textColor="@color/secb_dark_text"
-                android:textSize="@dimen/home_graphs_value_text_size"
-                android:textStyle="bold" />
+                android:textSize="@dimen/home_graphs_title_text_size"
+                android:textStyle="normal"/>
+        </LinearLayout>
 
 
-            <com.secb.android.view.components.dialogs.ProgressWheel
-                android:id="@+id/progressWheelProgress"
-                android:layout_centerInParent="true"
-                android:layout_height="@dimen/home_graphs_wheel_size"
-                android:layout_width="@dimen/home_graphs_wheel_size" />
-        </RelativeLayout>
+        <!--android:layout_weight="1"-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/home_graphs_horizontal_margin"
+            android:layout_marginRight="@dimen/home_graphs_horizontal_margin"
+            android:layout_marginTop="@dimen/home_graphs_card_margin_top"
+            android:orientation="vertical">
 
-        <TextView
-            android:gravity="center_horizontal|center_vertical"
-            android:id="@+id/txtv_graph_title_inProgress"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/progressWheelProgress"
-            android:layout_height="wrap_content"
-            android:layout_width="match_parent"
-            android:text="@string/graph_title_inProgress"
-            android:textColor="@color/secb_dark_text"
-            android:lineSpacingMultiplier="0.8"
-            android:textSize="@dimen/home_graphs_title_text_size"
-            android:lines="2"
-            android:textStyle="normal" />
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/txtv_graph_value_inbox"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="15"
+                    android:textColor="@color/secb_dark_text"
+                    android:textSize="@dimen/home_graphs_value_text_size"
+                    android:textStyle="bold"/>
+
+
+                <com.secb.android.view.components.dialogs.ProgressWheel
+                    android:id="@+id/progressWheelInbox"
+                    android:layout_width="@dimen/home_graphs_wheel_size"
+                    android:layout_height="@dimen/home_graphs_wheel_size"
+                    android:layout_centerInParent="true"/>
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/txtv_graph_title_inbox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/progressWheelInbox"
+                android:gravity="center_horizontal|center_vertical"
+                android:lineSpacingMultiplier="0.8"
+                android:lines="2"
+                android:text="@string/graph_title_inbox"
+                android:textColor="@color/secb_dark_text"
+                android:textSize="@dimen/home_graphs_title_text_size"
+                android:textStyle="normal"/>
+
+        </LinearLayout>
+
+
+        <!--android:layout_weight="1"-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/home_graphs_card_margin_top"
+            android:gravity="left"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1">
+
+                <TextView
+                    android:id="@+id/txtv_graph_value_inProgress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:text="15"
+                    android:textColor="@color/secb_dark_text"
+                    android:textSize="@dimen/home_graphs_value_text_size"
+                    android:textStyle="bold"/>
+
+
+                <com.secb.android.view.components.dialogs.ProgressWheel
+                    android:id="@+id/progressWheelProgress"
+                    android:layout_width="@dimen/home_graphs_wheel_size"
+                    android:layout_height="@dimen/home_graphs_wheel_size"
+                    android:layout_centerInParent="true"/>
+            </RelativeLayout>
+
+            <TextView
+                android:id="@+id/txtv_graph_title_inProgress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_below="@+id/progressWheelProgress"
+                android:gravity="center_horizontal|center_vertical"
+                android:lineSpacingMultiplier="0.8"
+                android:lines="2"
+                android:text="@string/graph_title_inProgress"
+                android:textColor="@color/secb_dark_text"
+                android:textSize="@dimen/home_graphs_title_text_size"
+                android:textStyle="normal"/>
+        </LinearLayout>
+
+
     </LinearLayout>
 
+    <!--loading-->
+    <LinearLayout
+        android:id="@+id/layout_graphs_progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/image_dark_layer"
+        android:visibility="gone">
 
-</LinearLayout>
+        <ProgressBar
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center|center_vertical|center_horizontal"/>
+    </LinearLayout>
+</RelativeLayout>
